# testu

./: .env.example  README.md  docker-compose.yaml  nuxt.config.js  package-lock.json  package.json
backend/: Dockerfile  Makefile  manage.py  pyproject.toml
backend/apps/: __init__.py  conftest.py
backend/apps/core/: admin.py  auth.py  auth_urls.py  factories.py  models.py  serializers.py  social.py  utils.py  validators.py
backend/apps/core/migrations/: 0001_initial.py  0002_onetimecode.py
backend/apps/core/tests/: test_auth.py  utils.py
backend/apps/exercises/: admin.py  models.py  serializers.py  views.py
backend/apps/exercises/migrations/: 0001_initial.py  0002_sheet_created_by_alter_sheet_description.py
backend/config/: urls.py
backend/config/settings/: base.py  devel.py
client/: Dockerfile  nuxt.config.js  package-lock.json
client/components/: GapsEditor.vue  OptionsSelector.vue  SheetEditor.vue
client/data/: langs.js  tags_available.json
client/layouts/: default.vue
client/middleware/: redirects.js
client/mixins/: cefr.js  langs_available.js
client/pages/: editor.vue  index.vue  inspire.vue  login.vue
client/pages/exercise/: _id.vue
client/plugins/: canvas-confetti.js  vue-auth-jwt.js
components/: GapsEditor.vue  OptionsSelector.vue  PlayGapSelect.vue
etc/nginx/: default.conf
layouts/: default.vue
pages/: index.vue
plugins/: vue-auth-jwt.js
store/: edit_drawer.js
